--- a/style.css
+++ b/style.css
@@ -8,6 +8,21 @@ h1 {
   margin-top: 0;
   font-size: 1.5em;
 }
+#info {
+  margin-top: 1.1em;
+  max-width: 1700px;
+}
+#description, #types {
+  background: #fff;
+  border: 1px solid #dce3ec;
+  border-radius: 8px;
+  padding: 0.6em 1em;
+  margin-bottom: 0.8em;
+}
+#types ul {
+  margin: 0;
+  padding-left: 1.2em;
+}
 #tree {
   margin-top: 1.1em;
   max-width: 1700px;
